src/test/ui/parser/removed-syntax-static-fn.stderr
error: missing `fn`, `type`, or `const` for associated-item declaration
  --> $DIR/removed-syntax-static-fn.rs:3:9
   |
LL |   impl S {
   |  _________^
LL | |
LL | |     static fn f() {}
   | |____^ missing `fn`, `type`, or `const`

error: aborting due to previous error

